src/cli/snapshots/librojo__cli__sourcemap__test__maps_absolute_paths.snap
---
source: src/cli/sourcemap.rs
expression: sourcemap_contents
---
{
  "name": "default",
  "className": "DataModel",
  "filePaths": "[...paths omitted...]",
  "children": [
    {
      "name": "ReplicatedStorage",
      "className": "ReplicatedStorage",
      "children": [
        {
          "name": "Project",
          "className": "ModuleScript",
          "filePaths": "[...paths omitted...]",
          "children": [
            {
              "name": "Module",
              "className": "Folder",
              "children": [
                {
                  "name": "module",
                  "className": "ModuleScript",
                  "filePaths": "[...paths omitted...]"
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}
