src/cli/snapshots/librojo__cli__sourcemap__test__maps_relative_paths.snap
---
source: src/cli/sourcemap.rs
expression: sourcemap_contents
---
{
  "name": "default",
  "className": "DataModel",
  "filePaths": [
    "default.project.json"
  ],
  "children": [
    {
      "name": "ReplicatedStorage",
      "className": "ReplicatedStorage",
      "children": [
        {
          "name": "Project",
          "className": "ModuleScript",
          "filePaths": [
            "src/init.luau"
          ],
          "children": [
            {
              "name": "Module",
              "className": "Folder",
              "children": [
                {
                  "name": "module",
                  "className": "ModuleScript",
                  "filePaths": [
                    "../module/module.luau"
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}
